--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^3.1.1",
     "bulma": "^0.9.4",
     "immer": "^10.0.2",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-bulma-components": "^4.1.0",
     "react-dom": "^18.2.0",
