--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "typescript": "^5.1.6"
   },
   "dependencies": {
+    "@idui/react-popover": "^3.1.0",
     "@prisma/client": "^4.16.2",
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
