--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,13 +11,16 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.1.1",
+    "@idui/react-popover": "^3.1.0",
+    "axios": "^1.4.0",
     "bulma": "^0.9.4",
-    "immer": "^10.0.2",
+    "immer": "^9.0.19",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-bulma-components": "^4.1.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.2",
+    "react-hot-toast": "^2.4.1",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.1",
     "redux": "^4.2.1",
